fix layer visibility

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -407,7 +407,11 @@
     "}\n",
     "\n",
     "# Add the geodataframe to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -467,7 +471,11 @@
     "}\n",
     "\n",
     "# Add the districts to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -548,7 +556,11 @@
     "}\n",
     "\n",
     "# Add the original bounding box to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -627,7 +639,11 @@
     "}\n",
     "\n",
     "# Add the original bounding box to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -708,7 +724,11 @@
     "}\n",
     "\n",
     "# Add the original bounding box to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
