--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -478,7 +478,11 @@
     "}\n",
     "\n",
     "# Add the bounding box to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -544,7 +548,11 @@
     "}\n",
     "\n",
     "# Add the bounding box to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -611,7 +619,11 @@
     "}\n",
     "\n",
     "# Add the bounding box to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -677,7 +689,11 @@
     "}\n",
     "\n",
     "# Add the geodataframe to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -739,7 +755,11 @@
     "}\n",
     "\n",
     "# Add the districts to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -889,7 +909,11 @@
     "}\n",
     "\n",
     "# Add the first process area to the folium map\n",
-    "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_1_epsg_4326,\n",
+    "    style_function=style_function_1,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
     "gdf_2 = process_area_2.to_gdf(epsg_code=25832)\n",
@@ -905,7 +929,11 @@
     "}\n",
     "\n",
     "# Add the second process area to the folium map\n",
-    "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_2_epsg_4326,\n",
+    "    style_function=style_function_2,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -999,7 +1027,11 @@
     "}\n",
     "\n",
     "# Add the first process area to the folium map\n",
-    "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_1_epsg_4326,\n",
+    "    style_function=style_function_1,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
     "gdf_2 = process_area_2.to_gdf(epsg_code=25832)\n",
@@ -1015,7 +1047,11 @@
     "}\n",
     "\n",
     "# Add the second process area to the folium map\n",
-    "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_2_epsg_4326,\n",
+    "    style_function=style_function_2,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -1111,7 +1147,11 @@
     "}\n",
     "\n",
     "# Add the first process area to the folium map\n",
-    "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_1_epsg_4326,\n",
+    "    style_function=style_function_1,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
     "gdf_2 = process_area_2.to_gdf(epsg_code=25832)\n",
@@ -1127,7 +1167,11 @@
     "}\n",
     "\n",
     "# Add the second process area to the folium map\n",
-    "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_2_epsg_4326,\n",
+    "    style_function=style_function_2,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -1365,7 +1409,11 @@
     "}\n",
     "\n",
     "# Add the geodataframe to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
@@ -1454,7 +1502,11 @@
     "}\n",
     "\n",
     "# Add the geodataframe to the folium map\n",
-    "folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "folium.GeoJson(\n",
+    "    data=gdf_epsg_4326,\n",
+    "    style_function=style_function,\n",
+    "    control=False,\n",
+    ").add_to(folium_map)\n",
     "\n",
     "folium_map"
    ],
