--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -230,10 +230,7 @@
     "bounding_box.x_max = 363276\n",
     "bounding_box.y_max = 5715518\n",
     "\n",
-    "print(bounding_box.x_min)\n",
-    "print(bounding_box.y_min)\n",
-    "print(bounding_box.x_max)\n",
-    "print(bounding_box.y_max)"
+    "print(bounding_box)"
    ],
    "id": "72c09f5419fc18df",
    "outputs": [],
@@ -375,10 +372,7 @@
     ")\n",
     "bounding_box = aviary.BoundingBox.from_gdf(gdf=gdf)\n",
     "\n",
-    "print(bounding_box.x_min)\n",
-    "print(bounding_box.y_min)\n",
-    "print(bounding_box.x_max)\n",
-    "print(bounding_box.y_max)"
+    "print(bounding_box)"
    ],
    "id": "c9cd36a0f6e7870c",
    "outputs": [],
@@ -436,10 +430,7 @@
     "gdf = gpd.read_file(url)\n",
     "bounding_box = aviary.BoundingBox.from_gdf(gdf=gdf)\n",
     "\n",
-    "print(bounding_box.x_min)\n",
-    "print(bounding_box.y_min)\n",
-    "print(bounding_box.x_max)\n",
-    "print(bounding_box.y_max)"
+    "print(bounding_box)"
    ],
    "id": "c3d0759711d02682",
    "outputs": [],
@@ -506,10 +497,7 @@
     "    y_max=5715582,\n",
     ")\n",
     "\n",
-    "print(bounding_box.x_min)\n",
-    "print(bounding_box.y_min)\n",
-    "print(bounding_box.x_max)\n",
-    "print(bounding_box.y_max)"
+    "print(bounding_box)"
    ],
    "id": "64e9e6da01799d77",
    "outputs": [],
@@ -521,10 +509,7 @@
    "source": [
     "buffered_bounding_box = bounding_box.buffer(buffer_size=64)\n",
     "\n",
-    "print(buffered_bounding_box.x_min)\n",
-    "print(buffered_bounding_box.y_min)\n",
-    "print(buffered_bounding_box.x_max)\n",
-    "print(buffered_bounding_box.y_max)"
+    "print(buffered_bounding_box)"
    ],
    "id": "d5f6e38b751a6d1f",
    "outputs": [],
@@ -589,10 +574,7 @@
     "    y_max=5715582,\n",
     ")\n",
     "\n",
-    "print(bounding_box.x_min)\n",
-    "print(bounding_box.y_min)\n",
-    "print(bounding_box.x_max)\n",
-    "print(bounding_box.y_max)"
+    "print(bounding_box)"
    ],
    "id": "709403995a17e4dd",
    "outputs": [],
@@ -604,10 +586,7 @@
    "source": [
     "buffered_bounding_box = bounding_box.buffer(buffer_size=-64)\n",
     "\n",
-    "print(buffered_bounding_box.x_min)\n",
-    "print(buffered_bounding_box.y_min)\n",
-    "print(buffered_bounding_box.x_max)\n",
-    "print(buffered_bounding_box.y_max)"
+    "print(buffered_bounding_box)"
    ],
    "id": "c0fe8e3b203fdc12",
    "outputs": [],
@@ -674,10 +653,7 @@
     "    y_max=5715582,\n",
     ")\n",
     "\n",
-    "print(bounding_box.x_min)\n",
-    "print(bounding_box.y_min)\n",
-    "print(bounding_box.x_max)\n",
-    "print(bounding_box.y_max)"
+    "print(bounding_box)"
    ],
    "id": "9985d9d60cd5eb4",
    "outputs": [],
@@ -689,10 +665,7 @@
    "source": [
     "quantized_bounding_box = bounding_box.quantize(value=128)\n",
     "\n",
-    "print(quantized_bounding_box.x_min)\n",
-    "print(quantized_bounding_box.y_min)\n",
-    "print(quantized_bounding_box.x_max)\n",
-    "print(quantized_bounding_box.y_max)"
+    "print(quantized_bounding_box)"
    ],
    "id": "9ef0f0e29eb8a4b0",
    "outputs": [],
@@ -759,10 +732,7 @@
     "    y_max=5715582,\n",
     ")\n",
     "\n",
-    "print(bounding_box.x_min)\n",
-    "print(bounding_box.y_min)\n",
-    "print(bounding_box.x_max)\n",
-    "print(bounding_box.y_max)"
+    "print(bounding_box)"
    ],
    "id": "bb6822c0e6a2c75c",
    "outputs": [],
