--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -114,8 +114,7 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "fe9af035f47ed08e",
    "outputs": [],
@@ -267,7 +266,7 @@
     ")\n",
     "process_area.coordinates = coordinates\n",
     "\n",
-    "print(process_area.coordinates)"
+    "print(process_area)"
    ],
    "id": "5ac0801321b1dbae",
    "outputs": [],
@@ -305,7 +304,7 @@
    "source": [
     "process_area.tile_size = 64\n",
     "\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "f7531faf6038ce5e"
   },
@@ -382,7 +381,7 @@
    "source": [
     "sliced_process_area = process_area[:-1]\n",
     "\n",
-    "print(sliced_process_area.coordinates)"
+    "print(sliced_process_area)"
    ],
    "id": "8b2a4cc628a412e9"
   },
@@ -445,8 +444,7 @@
     "    quantize=False,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "5d44ee55e7de3105",
    "outputs": [],
@@ -515,8 +513,7 @@
     "    quantize=False,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "3639ba0fdcd51eab",
    "outputs": [],
@@ -586,8 +583,7 @@
     "    quantize=True,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "eca0a983cb51523c",
    "outputs": [],
@@ -659,8 +655,7 @@
     "    quantize=False,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "8c4f19de246e990",
    "outputs": [],
@@ -722,8 +717,7 @@
     "    quantize=True,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "a8a2242ca24ffdb0",
    "outputs": [],
@@ -793,8 +787,7 @@
     ")\n",
     "process_area = aviary.ProcessArea.from_json(json_string=json_string)\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "d2507f7a73d87f71",
    "outputs": [],
@@ -861,10 +854,8 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area_1.coordinates)\n",
-    "print(process_area_1.tile_size)\n",
-    "print(process_area_2.coordinates)\n",
-    "print(process_area_2.tile_size)"
+    "print(process_area_1)\n",
+    "print(process_area_2)"
    ],
    "id": "157a81a8b5b11807",
    "outputs": [],
@@ -876,8 +867,7 @@
    "source": [
     "process_area = process_area_1 + process_area_2\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "b22a5f6468f546f0",
    "outputs": [],
@@ -979,10 +969,8 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area_1.coordinates)\n",
-    "print(process_area_1.tile_size)\n",
-    "print(process_area_2.coordinates)\n",
-    "print(process_area_2.tile_size)"
+    "print(process_area_1)\n",
+    "print(process_area_2)"
    ],
    "id": "ca719ef56ee88ac5",
    "outputs": [],
@@ -994,8 +982,7 @@
    "source": [
     "process_area = process_area_1 - process_area_2\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "b429ca09d4a1f1cc",
    "outputs": [],
@@ -1099,10 +1086,8 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area_1.coordinates)\n",
-    "print(process_area_1.tile_size)\n",
-    "print(process_area_2.coordinates)\n",
-    "print(process_area_2.tile_size)"
+    "print(process_area_1)\n",
+    "print(process_area_2)"
    ],
    "id": "8f02bda0ccdf7743"
   },
@@ -1114,8 +1099,7 @@
    "source": [
     "process_area = process_area_1 & process_area_2\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "f50b456607e47aad"
   },
@@ -1207,8 +1191,7 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "804de31ca2385cbf",
    "outputs": [],
@@ -1220,8 +1203,7 @@
    "source": [
     "process_area = process_area.append((363340, 5715582))\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "e4d0473d3d45a8b7",
    "outputs": [],
@@ -1257,8 +1239,7 @@
    "source": [
     "process_area = process_area.append((363340, 5715582))\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "c97b62efadccbbf1",
    "outputs": [],
@@ -1295,8 +1276,7 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "484b23275dee2fab",
    "outputs": [],
@@ -1309,8 +1289,7 @@
     "process_areas = process_area.chunk(num_chunks=2)\n",
     "\n",
     "for process_area in process_areas:\n",
-    "    print(process_area.coordinates)\n",
-    "    print(process_area.tile_size)"
+    "    print(process_area)"
    ],
    "id": "8bd6a5095eaa719a",
    "outputs": [],
@@ -1358,8 +1337,7 @@
     "    crs='EPSG:25832',\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)\n",
+    "print(process_area)\n",
     "print(gdf)"
    ],
    "id": "27ad15bc472555a0",
@@ -1379,8 +1357,7 @@
     ")\n",
     "process_area = process_area.filter(coordinates_filter=geospatial_filter)\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "1230031d05db5f54",
    "outputs": [],
@@ -1453,8 +1430,7 @@
     "    crs='EPSG:25832',\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)\n",
+    "print(process_area)\n",
     "print(gdf)"
    ],
    "id": "100696ed47aa9c38",
@@ -1472,8 +1448,7 @@
     ")\n",
     "process_area = process_area.filter(coordinates_filter=geospatial_filter)\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "539ca36473a96889",
    "outputs": [],
@@ -1544,8 +1519,7 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "dad9f0cf20fff808",
    "outputs": [],
@@ -1593,8 +1567,7 @@
     "    tile_size=128,\n",
     ")\n",
     "\n",
-    "print(process_area.coordinates)\n",
-    "print(process_area.tile_size)"
+    "print(process_area)"
    ],
    "id": "cc20fe734b11c9c7",
    "outputs": [],
