--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -19,7 +19,7 @@
     "Run the following cells in order and do not skip any cells.<br />\n",
     "If something seems off, just restart the runtime and run the cells again.\n",
     "\n",
-    "  [API reference]: https://geospaitial-lab.github.io/aviary/api_reference/core/bounding_box"
+    "  [API reference]: https://geospaitial-lab.github.io/aviary/api_reference/core/bounding_box/#aviary.BoundingBox"
    ],
    "id": "fbde9a2e59edb7f4"
   },
