--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -533,9 +533,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Union bounding boxes\n",
+    "## Unite bounding boxes\n",
     "\n",
-    "You can union two bounding boxes using the `|` operator."
+    "You can unite two bounding boxes using the `|` operator."
    ],
    "id": "de8ed52db44b3983"
   },
