--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -92,19 +92,19 @@
    "source": [
     "We can visualize the bounding box in an interactive map with [Folium] for a better understanding.\n",
     "\n",
-    "Install folium in the current runtime using pip.\n",
+    "Install Folium in the current runtime using pip.\n",
     "\n",
     "  [Folium]: https://python-visualization.github.io/folium"
    ],
-   "id": "a20a76b220aee0d1"
+   "id": "8520be50241eb0fb"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "! pip install -q folium",
-   "id": "956a5dc4df839864",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "! pip install -q folium",
+   "id": "52b7fe7b665a6536"
   },
   {
    "metadata": {},
